Add z directory jumper to dotfiles

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Vundle.vim"]
 	path = Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim
+[submodule "z"]
+	path = z
+	url = /Users/anja/dotfiles/z
