update with new copy-tables syntax https://github.com/tmux/tmux/blob/7a1abd66e7f38412f4bdc944d969e88d6b268a13/CHANGES#L571-L596

--- a/tmux.conf
+++ b/tmux.conf
@@ -109,7 +109,7 @@ bind f resize-pane -Z
 # use hjkl to move around buffer
 setw -g mode-keys vi
 
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
 
 set-option -g repeat-time 50
 
