--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ bind ^ last-window
 
 set-option -g repeat-time 100
 
-setw -g utf8 on
+#setw -g utf8 on
 
 # split panes using | and -
 bind | split-window -h #-c "#{pane_current_path}"
